tests/macro-tests/cases/widget/name_conflict1.stderr
error[E0255]: the name `TestWidget` is defined multiple times
  --> cases/widget/name_conflict1.rs:10:1
   |
 8 | pub use crate::TestWidget;
   |         ----------------- previous import of the type `TestWidget` here
 9 |
10 | #[widget($crate::TestWidget)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `TestWidget` redefined here
   |
   = note: `TestWidget` must be defined only once in the type namespace of this module
   = note: this error originates in the attribute macro `widget` (in Nightly builds, run with -Z macro-backtrace for more info)
help: you can use `as` to change the binding name of the import
   |
 8 | pub use crate::TestWidget as OtherTestWidget;
   |                           ++++++++++++++++++
